checkpoint progress from pre-con

--- a/eksctl-cluster-config.yaml
+++ b/eksctl-cluster-config.yaml
@@ -1,10 +1,11 @@
 apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 metadata:
-  name: cilium-stack-walkthrough
+  name: 
   region: us-west-2
+  version: 
 managedNodeGroups:
-- name: ng-1
+- name: -ng-1
   privateNetworking: true
   taints: 
   - key: "node.cilium.io/agent-not-ready"
